// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: PasswordStrength ui default: Component: PasswordStrength => ui => default 1`] = `
<Fragment>
  <Progress
    className="mb-2"
    color="danger"
    max={100}
    min={0}
    style={
      Object {
        "height": 5,
      }
    }
    tag="div"
    value={0}
  />
  <div
    className="mb-2"
  >
    <div
      key="lowercase"
    >
      <Icon
        className="align-bottom mb-1 mr-3"
        color="danger"
        icon="cancel"
        size={16}
      />
      Must contain at least one lowercase letter
    </div>
    <div
      key="minimumLength"
    >
      <Icon
        className="align-bottom mb-1 mr-3"
        color="danger"
        icon="cancel"
        size={16}
      />
      Must contain at least 10 characters
    </div>
  </div>
</Fragment>
`;

exports[`Component: PasswordStrength ui without meter: Component: PasswordStrength => ui => without meter 1`] = `
<Fragment>
  <div
    className="mb-2"
  >
    <div
      key="lowercase"
    >
      <Icon
        className="align-bottom mb-1 mr-3"
        color="danger"
        icon="cancel"
        size={16}
      />
      Must contain at least one lowercase letter
    </div>
    <div
      key="minimumLength"
    >
      <Icon
        className="align-bottom mb-1 mr-3"
        color="danger"
        icon="cancel"
        size={16}
      />
      Must contain at least 10 characters
    </div>
  </div>
</Fragment>
`;
